[package]
name = "http-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
url = "2.3.1"
