[package]
name = "oxd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
