[package]
name = "oxd"
version = "0.1.2"
description = "Client to query Oxford Dictionary API"
edition = "2021"
repository = "https://github.com/chunjiw/oxd"
homepage = "https://github.com/chunjiw/oxd"
keywords = ["Oxford", "dictionary"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.24", features = ["derive"] }
colored = "2.0.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
rodio = "0.16.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
